src/objects/Question_Post__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Id__c</fullName>
        <label>Post Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Id__c</fullName>
        <label>Question Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Started</label>
        <type>Checkbox</type>
    </fields>
    <label>Question Post</label>
</CustomObject>